osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_unary_operator_query_validation_failure[not False].txt
error: the operand must not be a literal
--> main.sml:1:8
     |
   1 | Query = not False
     |         ^ the right side of the `Boolean(value=False)` must be a non-literal (non-constant) value
--> (1) main.sml:1:12
     |
   1 | Query = not False
     |             ^ this is a literal value
